Fix for picking in FF (layout problem)
git-svn-id: https://x3dom.svn.sourceforge.net/svnroot/x3dom/trunk@841 3fb95f9c-b211-4acc-b2b6-5f5c22209b5a

--- a/src/x3dom.css
+++ b/src/x3dom.css
@@ -4,9 +4,18 @@ body {
   font-size: 12px;
 }
 
+X3D, x3d {
+  position: relative;   /* in order to be able to position stat-div within X3D */
+  display:block;        /* layou the X3D as block so it has the same size like the canvas */
+  cursor:pointer;
+  border:1px solid red;
+  margin:0;
+}
+
 .x3dom-canvas {
   border:none;
   cursor:pointer;
+  display:block;
   width:100%;
   height:100%;
 }
